clean up layout

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -23,5 +23,7 @@
         <% end %>
       </div>
     </div>
-</div>
+    <div class="mb-3">
       <%= link_to '[ Back ]', articles_path, class: "text-secondary row justify-content-center" %>
+    </div>
+</div>
