--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,8 @@
-<h1 align="center"> Welcome to <%= @user.username %>'s page </h1>
-<div class="row">
-    <div class="col-md-4 col-md-offset-4 center">
+<h1 class="text-center mt-4"> Welcome to <%= @user.username %>'s page </h1>
+<div class="container">
+    <div class="row justify-content-md-center">
     <%= gravatar_for @user, size: 150%>
     </div>
 </div>
-<h4 align="center"><%= @user.username %>'s articles </h4>   
+<h4 class="text-center mt-4"><%= @user.username %>'s articles </h4>   
 <%= render 'articles/article', obj: @user.articles %>
