--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,3 +2,9 @@
 
 <%= render 'article', obj: @articles %>
 
+
+<nav aria-label="Page navigation example">
+  <ul class="pagination justify-content-center">
+    <li class="page-item"> <%= will_paginate @articles, class: "page-link font-weight-normal "%></li>
+  </ul>
+</nav>
