--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -5,28 +5,48 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
+        <% if logged_in? %> 
+        <ul class="navbar-nav mr-auto">          
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Articles
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <%= link_to "Create new article", new_article_path, class: "dropdown-item"%>
-              <%= link_to "View articles", articles_path, class: "dropdown-item"%>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
+              <%= link_to "View articles", articles_path, class: "dropdown-item"%>
+             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+            <%= link_to "Users", users_path, class: "nav-link" %>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
+        <ul class="navbar-nav">
+          <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Your Profile
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <%= link_to "View your profile", user_path(current_user), class: "dropdown-item"%>
+                <%= link_to "Edit your profile", edit_user_path(current_user), class: "dropdown-item"%>
+                <div class="dropdown-divider"></div>
+                <%= link_to 'Log out', logout_path, method: :delete, class: "dropdown-item" %>
+              </div>
+          </li>
+        </ul> 
+        <% else %>
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a><%= link_to 'Log in', login_path, class: "nav-link" %></a>
+          </li>
+          <li class="nav-item">
+            <a><%= link_to 'Sign up', signup_path, class: "nav-link" %></a>
+          </li>
+        </ul>
+        <% end %>
       </div>
     </nav>
