--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,5 +1,5 @@
+<% obj.each do |article| %>
   <div class="container">
-    <% obj.each do |article| %>
       <div class="row justify-content-md-center">
         <div class="col-8 mt-4">
           <div class="card text-center shadow mb-5 bg-white rounded">
@@ -10,8 +10,10 @@
               <h5 class="card-title"><%= link_to article.title, article_path(article), class: "text-success" %></h5>
               <p class="card-text"><%= truncate(article.description, length: 100) %></p>
               <%= link_to "View", article_path(article), class: "btn btn-outline-success" %>
+              <% if logged_in? && current_user == article.user %>
               <%= link_to "Edit", edit_article_path(article), class: "btn btn-outline-info" %>
               <%= link_to "Delete", article_path(article),:method => :delete, class: "btn btn-outline-danger" %>
+              <% end %>
             </div>
             <div class="card-footer text-muted">
               <small> Created <%= time_ago_in_words(article.created_at) %> ago,
