--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -2,7 +2,7 @@
   <%= form_with(model: @user, class:"shadow p-3 mb-3 bg-secondary rounded", local: true) do |form| %>  
     <div class="row justify-content-center">
       <div class="col-10">
-      <%= render 'errors' %>
+      <%= render 'shared/errors', obj: @user %>
         <div class="form-group row">
           <%= form.label :username, class: "col-2 col-form-label text-light" %>
           <div class="col-10">
