--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -17,10 +17,20 @@
           </div>
         </div>
 
+        <div class="form-group row">
+          <div class="col-8">
+            <%= form.collection_check_boxes :category_ids, Category.all, :id, :name do |cb| %>
+              <% cb.label(class: "checkbox-inline input_checkbox") {cb.check_box(class: "checkbox") + cb.text} %>
+            <% end %>
+          </div>
+        </div>
+
         <div class="form-group row justify-content-center">
           <%= form.submit class:"btn btn-outline-light btn-lg" %>
         </div>
         <% end %>
+
+        
       </div>
     </div>
     <div class="mb-3">
