--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,5 @@
 <h2 class="text-center mt-4"><%= @article.title %></h2>
   <div class="container"> 
-  
-      <div class="row justify-content-md-center">
         <div class="col-8 mt-4">
           <div class="card text-center shadow mb-5 bg-white rounded">
             <ul class="listing">
@@ -14,6 +12,9 @@
             </ul>
             <div class="card-body">
               <div class="card-text text-left"><%= simple_format(@article.description) %></div>
+              <% if @article.categories.any? %>
+                 <p>Categories: <%= render @article.categories %></p>
+              <% end %>
               <% if logged_in? && (current_user == @article.user || current_user.admin?) %>
               <%= link_to "Edit", edit_article_path(@article), class: "btn btn-outline-info" %>
               <%= link_to "Delete", article_path(@article),:method => :delete, class: "btn btn-outline-danger" %>
