--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,23 +1,3 @@
 <h1> Category </h1>
 
-<%= render 'shared/errors', obj: @category %>
-<div class="container">
-  <%= form_with(model: @category, class:"shadow p-3 mb-3 bg-secondary rounded", local: true) do |form| %>  
-    <div class="row justify-content-center">
-      <div class="col-10">
-        <div class="form-group row">
-          <%= form.label :category, class: "col-2 col-form-label text-light" %>
-          <div class="col-10">
-            <%= form.text_field :name, class: "form-control shadow rounded", placeholder: "Enter category name" %>
-          </div>
-        </div>
-        <div class="form-group row justify-content-center">
-            <%=  form.submit "Submit",  class: 'btn btn-primary btn-lg' %> 
-        </div>
-        <% end %>
-      </div>
-    </div>
-    <div class="mb-3">
-      <%= link_to '[ Back ]', articles_path, class: "text-secondary row justify-content-center" %>
-    </div>
-</div>
+<%= render 'form' %>
