--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,5 +1,7 @@
 <h1 class="text-center mt-4"> <%= "Category: " + @category.name %></h1>
-
+<% if logged_in? && current_user.admin %>
+<span> <%= link_to "Edit Category Name", edit_category_path(@category) %> </span>
+<% end %>
 <%= render 'articles/article', obj: @category_articles %>
 
 
