--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,9 +1,13 @@
 <h1 class="text-center mt-4"> <%= "Category: " + @category.name %></h1>
-<% if logged_in? && current_user.admin %>
-<span> <%= link_to "Edit Category Name", edit_category_path(@category) %> </span>
-<% end %>
-<%= render 'articles/article', obj: @category_articles %>
+  <div class="container mt-4">
+    <% if logged_in? && current_user.admin %>
+        <div class="row justify-content-md-center">
+          <span><%= link_to "Edit Category Name", edit_category_path(@category) %> </span>
+        </div>
+    <% end %>
+  </div>
 
+  <%= render 'articles/article', obj: @category_articles %>
 
 <nav aria-label="Page navigation example">
   <ul class="pagination justify-content-center">
