--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body class="d-flex flex-column">
+  <body class="d-flex flex-column ml-0 mr-0 mt-0">
     <%= render 'layouts/navigation' %>
     <div id="page-content">
       <%= render 'layouts/messages' %>
