--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,30 +1,31 @@
-<h2 class="text-center mt-4"><%= @article.title %></h2>
+<h1 class="text-center mt-4">Title: <%= @article.title %></h2>
   <div class="container"> 
-        <div class="col-8 mt-4">
-          <div class="card text-center shadow mb-5 bg-white rounded">
-            <ul class="listing">
-              <li>Created by: </li>
-              <li><%= link_to gravatar_for(@article.user), user_path(@article.user) %></li>
-              <li class="article-title">
-              <%= link_to @article.user.username, user_path(@article.user) %>
-              </li>
-              <li><small><%= pluralize(@article.user.articles.count, "article") if @article.user.articles %> </small> </li>
-            </ul>
-            <div class="card-body">
-              <div class="card-text text-left"><%= simple_format(@article.description) %></div>
-              <% if @article.categories.any? %>
-                 <p>Categories: <%= render @article.categories %></p>
-              <% end %>
-              <% if logged_in? && (current_user == @article.user || current_user.admin?) %>
-              <%= link_to "Edit", edit_article_path(@article), class: "btn btn-outline-info" %>
-              <%= link_to "Delete", article_path(@article),:method => :delete, class: "btn btn-outline-danger" %>
-              <% end %>
+      <div class="row justify-content-md-center">
+          <div class="col-8 mt-4">
+            <div class="card text-center shadow mb-5 bg-white rounded">
+              <ul class="listing">
+                <li class="mt-1">Created by: </li>
+                <li class="mt-1"><%= link_to gravatar_for(@article.user), user_path(@article.user)%></li>
+                <li class="article-title mt-1">
+                <%= link_to @article.user.username, user_path(@article.user) %>
+                </li>
+                <li><small><%= pluralize(@article.user.articles.count, "article") if @article.user.articles %> </small> </li>
+              </ul>
+              <div class="card-body">
+                <div class="card-text text-left"><%= simple_format(@article.description) %></div>
+                <% if @article.categories.any? %>
+                  <p>Categories: <%= render @article.categories %></p>
+                <% end %>
+                <% if logged_in? && (current_user == @article.user || current_user.admin?) %>
+                <%= link_to "Edit", edit_article_path(@article), class: "btn btn-outline-info" %>
+                <%= link_to "Delete", article_path(@article),:method => :delete, class: "btn btn-outline-danger" %>
+                <% end %>
+              </div>
+              <div class="card-footer text-muted">
+                <small> Created <%= time_ago_in_words(@article.created_at) %> ago,
+                edited <%= time_ago_in_words(@article.updated_at) %> ago </small>
+              </div>
             </div>
-            <div class="card-footer text-muted">
-              <small> Created <%= time_ago_in_words(@article.created_at) %> ago,
-              edited <%= time_ago_in_words(@article.updated_at) %> ago </small>
-            </div>
-          </div>
         </div>
       </div>
   </div>
