--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,14 +1,21 @@
-<h1> Listing all Categories </h1>
+<div class="container mt-4">
+    <div class="row justify-content-md-center">
+        <h1> Listing all Categories </h1>
+    </div>
+</div>
+
 <% @categories.each do |category| %>
-    <ul> 
-        <div>
-            <div> 
-            <li>
-                <%= link_to "#{category.name}", category_path(category) %>
-            </li>
-            <li><small><%= pluralize(category.articles.count, "article") %></small></li>
+<div class="container">
+    <div class="row justify-content-md-center">
+        <div class="col-4 mt-2">
+            <div class="card text-center shadow mb-5 bg-white rounded">
+                    <div class="card-body">
+                        <h5 class="card-title"><%= link_to "#{category.name}", category_path(category), class: "text-success" %></h5>
+                        <div><small><%= pluralize(category.articles.count, "article") %></small></div>
+                    </div>
             </div>
         </div>
-    </ul>
+    </div>
+</div>
 <% end %>    
-    <%= will_paginate %> 
+<%= will_paginate %> 
