--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,20 +1,24 @@
 <h1 class="text-center mt-4"> All Bloggers </h1>
-<div class="container">
-     <% @users.each do |user| %>
-      <div class="row justify-content-md-center">
-        <ul class="listing">
-            <li><%= link_to gravatar_for(user), user_path(user) %></li>
-            <li class="article-title">
-            <%= link_to user.username, user_path(user) %>
-            </li>
-            <li><small><%= pluralize(user.articles.count, "article") if user.articles %> </small> </li>
-            <% if logged_in? && current_user.admin? %>
-            <li> <%= link_to "Delete this user", user_path(user), method: :delete, data: { confirm: "Are you sure you want to delete the user and their articles?" } %> </li>
-            <% end %>
-        </ul>
-      </div> 
+
+<% @users.each do |user| %>
+<div class="container mt-4">
+        <div class="row justify-content-md-center">
+          <div class="col-4 mt-2">
+            <div class="card text-center shadow mb-5 bg-white rounded">
+              <div class="card-body">
+                <p><%= link_to gravatar_for(user), user_path(user) %></p>
+                <p class="article-title"><%= link_to user.username, user_path(user) %></p>
+                <p><small><%= pluralize(user.articles.count, "article") if user.articles %> </small> </p>
+                <% if logged_in? && current_user.admin? %>
+                  <p> <%= link_to "Delete this user", user_path(user), method: :delete, data: { confirm: "Are you sure you want to delete the user and their articles?" } %> </p>
+                <% end %>
+              </div> 
+            </div>
+          </div>
+        </div>
     <% end %>
-</div>
+  </div>
+
 
 <nav aria-label="Page navigation example">
   <ul class="pagination justify-content-center">
