--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -17,13 +17,17 @@
           </div>
         </div>
 
-        <div class="form-group row">
-          <div class="col-2 ">
-            <%= form.collection_check_boxes :category_ids, Category.all, :id, :name do |cb| %>
-              <% cb.label(class: "checkbox-inline input_checkbox") {cb.check_box(class: "checkbox") + cb.text} %>
-            <% end %>
+      <div class="container">
+        <div class="justify-content-center">
+          <div class="form-group">
+            <div class="col-12 ">
+              <%= form.collection_check_boxes :category_ids, Category.all, :id, :name do |cb| %>
+                <% cb.label(class: "checkbox-inline input_checkbox") {cb.check_box(class: "checkbox") + cb.text} %>
+              <% end %>
+            </div>
           </div>
         </div>
+      </div>
 
         <div class="form-group row justify-content-center">
           <%= form.submit class:"btn btn-outline-light btn-lg" %>
