--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -18,14 +18,10 @@
         </div>
 
       <div class="container">
-        <div class="justify-content-center">
-          <div class="form-group">
-            <div class="col-12 ">
+        <div class="row row-cols-3">
               <%= form.collection_check_boxes :category_ids, Category.all, :id, :name do |cb| %>
-                <% cb.label(class: "checkbox-inline input_checkbox") {cb.check_box(class: "checkbox") + cb.text} %>
+                <% cb.label(class: "col checkbox-inline input_checkbox") {cb.check_box(class: "checkbox") + cb.text} %>
               <% end %>
-            </div>
-          </div>
         </div>
       </div>
 
