--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -31,6 +31,6 @@
       </div>
     </div>
     <div class="mb-3">
-      <%= link_to '[ Back ]', articles_path, class: "text-secondary row justify-content-center" %>
+      <%= link_to '[ Back ]', root_path, class: "text-secondary row justify-content-center" %>
     </div>
 </div>
