--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,11 @@
 <div class="container" id="home-container">
   <div class="jumbotron text-center text-white">
-    <h1 class="display-4">Post it!</h1>
-    <p class="lead">Hey, let me hear your thoughts about anything!.</p>
-    <hr class="my-4">
-    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+    <h1 class="display-4" id="home-container-t">POST IT!</h1>
+    <p class="lead" id="home-container-l">Be your own story teller</p>
+    <hr class="my-4" >
+    <p id="home-container-l">"No story lives unless someone wants to listen. The stories we love best do live in us forever. So whether you come back by page or by the big screen, Hogwarts will always be there to welcome you home.” - J.K. Rowling, author</p>
     <% if !logged_in? %>
-    <%= link_to "Sign up!", signup_path, class: "btn btn-success btn-lg" %>
+    <%= link_to "Sign up!", signup_path, class: "btn btn-secondary btn-lg", id: "home-container-l" %>
     <% end %>
   </div>
 </div>
